Fixing completion at the start of an expression of a String template.